# J-FOOTBALL-RECORD

./: .gitignore  README.md  db.sqlite3  pyproject.toml  sample.sql
backend/: settings.py  urls.py
jfootball_record/: apps.py  models.py  urls.py
jfootball_record/adaptor/: adaptor.py  adaptor_protocol.py  league_adaptor.py  team_adaptor.py
jfootball_record/exception/: exception_handler.py  exceptions.py
jfootball_record/helpers/: convert_function.py
jfootball_record/migrations/: 0001_initial.py  0002_alter_comments_comment_by_and_more.py  0003_nice_unique_nice.py
jfootball_record/model_definition/: comments_models.py  favorite_teams_models.py  leagues_models.py  match_records_models.py  nice_models.py  picture_models.py  teams_models.py  users_models.py
jfootball_record/serializer/: comments_serializer.py  match_records_serializer.py  nice_serializer.py  picture_serializer.py  teams_serializer.py  user_serializer.py
jfootball_record/usecase/: league_usecase.py  palyers_usecase.py  team_usecase.py  usecase_protocol.py
jfootball_record/views/: comments_views.py  league_views.py  match_records_views.py  nice_views.py  picture_views.py  players_view.py  team_views.py  user_views.py
